tests/fail/expr/reference.rs
fn main() {
    one_assert::assert!(&true);
    one_assert::assert!(&1);
}
