tests/fail/expr/reference.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/reference.rs:2:25
  |
2 |     one_assert::assert!(&true);
  |                         ^^^^^ expected `bool`, found `&bool`
  |
help: consider removing the borrow
  |
2 -     one_assert::assert!(&true);
2 +     one_assert::assert!(true);
  |

error[E0308]: mismatched types
 --> tests/fail/expr/reference.rs:3:25
  |
3 |     one_assert::assert!(&1);
  |                         ^^ expected `bool`, found `&{integer}`
